mobile layout finished

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
      <div class="footer__logo-container">
         <img class="footer__logo" src="./images/logo.svg" alt="logo">
       </div>
-      <div class="footer-links">
+      <div class="footer-links"> <!--block footer-links-->
          <a href="#">FAQs</a>
          <a href="#">Contact Us</a>
          <a href="#">Privacy Policy</a>
@@ -117,18 +117,18 @@
       </div>
       <div class="footer-social">
          <ul class="footer-social__media">
-            <li>
-               <a href="#">
+            <li class="footer-social__element">
+               <a class="footer-social__link" href="#">
                   <i class="fab fa-facebook-square"></i>
                </a>
             </li>
-            <li>
-               <a href="#">
+            <li class="footer-social__element">
+               <a class="footer-social__link" href="#">
                   <i class="fab fa-twitter"></i>
                </a>
             </li>
-            <li>
-               <a href="#">
+            <li class="footer-social__element">
+               <a class="footer-social__link" href="#">
                   <i class="fab fa-instagram"></i>
                </a>
             </li>
