tablet media queries

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
          <p class="snippets__description">Clipboard instantly stores any item you copy in the cloud, 
          meaning you can access your snippets immediately on all your 
          devices. Our Mac and iOS apps will help you organize everything.</p>
-         <div class="functions__img-container">
-            <img class="functions__img" src="./images/image-computer.png" alt="pc image">
+         <div class="snippets__img-container">
+            <img class="snippets__img" src="./images/image-computer.png" alt="pc image">
          </div>
          <div class="functions">
             <div class="functions__function"> <!--TODO: div de mas?-->
