--- a/index.html
+++ b/index.html
@@ -30,26 +30,28 @@
          <p class="snippets__description">Clipboard instantly stores any item you copy in the cloud, 
          meaning you can access your snippets immediately on all your 
          devices. Our Mac and iOS apps will help you organize everything.</p>
-         <div class="snippets__img-container">
-            <img class="snippets__img" src="./images/image-computer.png" alt="pc image">
-         </div>
-         <div class="functions">
-            <div class="functions__function"> <!--TODO: div de mas?-->
-               <h3 class="functions__title">Quick Search</h3>
-               <p class="functions__description">Easily search your snippets by content, 
-                  category, web address, application, and more.</p>
+         <div class="snippets__split">
+            <div class="snippets__img-container">
+               <img class="snippets__img" src="./images/image-computer.png" alt="pc image">
             </div>
-            <div class="functions__function">
-               <h3 class="functions__title">iCloud Sync</h3>
-               <p class="functions__description">Instantly saves and syncs snippets across 
-                  all your devices.</p>
+            <div class="functions">
+               <div class="functions__function"> <!--TODO: div de mas?-->
+                  <h3 class="functions__title">Quick Search</h3>
+                  <p class="functions__description">Easily search your snippets by content, 
+                     category, web address, application, and more.</p>
+               </div>
+               <div class="functions__function">
+                  <h3 class="functions__title">iCloud Sync</h3>
+                  <p class="functions__description">Instantly saves and syncs snippets across 
+                     all your devices.</p>
+               </div>
+               <div class="functions__function">
+                  <h3 class="functions__title">Complete History</h3>
+                  <p class="functions__description">Retrieve any snippets from the first moment 
+                     you started using the app.</p>
+               </div>
             </div>
-            <div class="functions__function">
-               <h3 class="functions__title">Complete History</h3>
-               <p class="functions__description">Retrieve any snippets from the first moment 
-                  you started using the app.</p>
-            </div>
-         </div>
+         </div>   
      </section>
 
      <section class="access">
